# TaipanStack

./: .dockerignore  .gitignore  .importlinter  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  bench_opt.py  bench_test.py  benchmark.py  benchmark2.py  benchmark_compare.py  benchmark_guard.py  benchmark_guards.py  benchmark_guards_all.py  check.py  docker-compose.yml  entrypoint.sh  find_all_unused.py  find_dead.py  find_real_unused.py  find_unused.py  find_unused_ast.py  find_unused_public.py  index.html  manage.py  mkdocs.yml  objects.inv  parse_ast.py  patch.diff  patch.py  patch2.diff  patch_opts_final2.py  patch_opts_final3.py  patch_opts_final4.py  (+10 more)
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml  greetings.yml  labeler.yml  pipeline.yml  publish.yml  sbom-slsa.yml  stale.yml
.jules/: sentinel.md
.semgrep/: taipanstack-rules.yml
alembic/: env.py
alembic/versions/: 2604a7be45e9_create_api_keys_table.py  4a6dc61d39f1_add_webhook_gpg_to_apikeys.py
api/config/: index.html
api/core/: index.html
api/security/: index.html
api/utils/: index.html
architecture/: index.html
dev/bench/: data.js
docs/: FEATURES_v0.3.0.md  FEATURES_v0.3.1.md  OPERATIONS.md  RUNBOOK.md  api.md  architecture.md  index.md
docs/api/: config.md  core.md  security.md  utils.md
docs/overrides/: hooks.py
docs/patterns/: security.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.2.9.md  v0.3.0.md  v0.3.1.md  v0.3.10.md  v0.3.2.md  v0.3.3.md  v0.3.4.md  v0.3.5.md  v0.3.6.md  v0.3.7.md  v0.3.8.md  v0.3.9.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2837283573825bc5___init___py.html  z_2837283573825bc5_generators_py.html  z_2837283573825bc5_models_py.html  z_2837283573825bc5_version_config_py.html  z_28918b2ff2e1b93c___init___py.html  z_28918b2ff2e1b93c_compat_py.html  z_28918b2ff2e1b93c_optimizations_py.html  z_28918b2ff2e1b93c_result_py.html  z_3f522a09208f6d6e___init___py.html  z_3f522a09208f6d6e_decorators_py.html  z_3f522a09208f6d6e_guards_py.html  z_3f522a09208f6d6e_jwt_py.html  z_3f522a09208f6d6e_models_py.html  z_3f522a09208f6d6e_password_py.html  z_3f522a09208f6d6e_sanitizers_py.html  z_3f522a09208f6d6e_types_py.html  z_3f522a09208f6d6e_validators_py.html  z_9654db7cff7d4490___init___py.html  z_9654db7cff7d4490_cache_py.html  z_9654db7cff7d4490_circuit_breaker_py.html  z_9654db7cff7d4490_concurrency_py.html  z_9654db7cff7d4490_context_py.html  z_9654db7cff7d4490_filesystem_py.html  z_9654db7cff7d4490_logging_py.html  z_9654db7cff7d4490_metrics_py.html  z_9654db7cff7d4490_rate_limit_py.html  z_9654db7cff7d4490_resilience_py.html  z_9654db7cff7d4490_retry_py.html  z_9654db7cff7d4490_serialization_py.html  z_9654db7cff7d4490_subprocess_py.html  z_ce9bd2c178f49c68___init___py.html  z_ff93792cf40911da___init___py.html  z_ff93792cf40911da_main_py.html  z_ff93792cf40911da_secure_system_py.html
logs/logs_52116704046/: 10_Test Python 3.10 on windows-latest.txt  11_Test Python 3.13 on macos-latest.txt  12_Test Python 3.10 on macos-latest.txt  13_Test Python 3.12 on macos-latest.txt  14_Code Quality Checks.txt  15_Docstring Coverage.txt  16_Type Checking.txt  17_Dry Run Test.txt  1_Test Python 3.11 on windows-latest.txt  2_Test Python 3.11 on macos-latest.txt  3_Test Python 3.11 on ubuntu-latest.txt  4_Security Scanning.txt  5_Test Python 3.12 on windows-latest.txt  6_Test Python 3.10 on ubuntu-latest.txt  7_Test Python 3.13 on windows-latest.txt  8_Test Python 3.12 on ubuntu-latest.txt  9_Test Python 3.13 on ubuntu-latest.txt
overrides/: hooks.py
patterns/security/: index.html
pyapp/: README.md  build.ps1  build.sh
releases/v0.1.0/: index.html
releases/v0.2.0/: index.html
releases/v0.2.1/: index.html
releases/v0.2.2/: index.html
releases/v0.2.3/: index.html
releases/v0.2.4/: index.html
releases/v0.2.5/: index.html
releases/v0.2.6/: index.html
releases/v0.2.7/: index.html
releases/v0.2.8/: index.html
releases/v0.2.9/: index.html
releases/v0.3.0/: index.html
releases/v0.3.1/: index.html
releases/v0.3.10/: index.html
releases/v0.3.2/: index.html
releases/v0.3.3/: index.html
releases/v0.3.4/: index.html
releases/v0.3.5/: index.html
releases/v0.3.6/: index.html
releases/v0.3.7/: index.html
releases/v0.3.8/: index.html
releases/v0.3.9/: index.html
scripts/: chaos_test.sh
search/: search_index.json
src/app/: __init__.py  main.py  secure_system.py
src/invario/: __init__.py
src/invario/api/: dependencies.py  (+6 more)
src/stack/: __init__.py
src/taipanstack/: __init__.py
tests/: test_100_coverage_final.py  test_100_percent_coverage.py  test_absolute_final.py  test_app_main.py  test_benchmark_guard.py  test_benchmarks.py  test_compat.py  test_config_generators.py  test_config_models.py  test_edge_cases_coverage.py  test_example.py  test_filesystem_traversal.py  test_filesystem_traversal_extended.py  test_final_coverage.py  test_final_push_100.py  test_full_coverage.py  test_fuzz_email_validator.py  test_fuzz_jwt.py  test_fuzz_models.py  test_fuzz_models_recursion.py  test_fuzz_sanitizers_types.py  test_fuzz_url.py  test_fuzz_url2.py  test_logging_extra.py  test_mocked_coverage.py  test_optimizations.py  test_property_sanitizers.py  test_result_module.py  test_secure_system.py  test_security_decorators.py  test_security_guards.py  test_security_jwt.py  test_security_models.py  test_security_password.py  test_security_sanitizers.py  test_security_ssrf.py  test_security_subprocess.py  test_security_types.py  test_security_validators.py  test_security_validators.py.orig  (+27 more)
tests/invario/: test_api_integration.py  test_domain_models.py  test_guards_financial.py  test_ingestion_cnab.py  test_ingestion_csv.py  test_ingestion_json.py  test_ingestion_pipeline.py  test_ledger_integrity.py  test_ledger_store.py  test_reconciliation_engine.py
tests/performance/: locustfile.py
(+90 files in other folders)
