[project]
name = "invario"
version = "0.1.0"
description = "Invario - High-Integrity Settlement & Compliance Middleware"
authors = [
    {name = "gabrielima7", email = "gabrielima.alu.lmb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = {text = "MIT"}
keywords = ["fintech", "compliance", "middleware", "settlement", "zero-trust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial Technology",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic (>=2.0)",
    "pydantic-settings (>=2.0.0)",
    "orjson (>=3.9.0)",
    "email-validator (>=2.0.0)",
    "result (>=0.17.0)",
    "fastapi (>=0.109.0)",
    "uvicorn (>=0.27.0)",
    "sqlalchemy (>=2.0.0)",
    "asyncpg (>=0.29.0)",
    "python-multipart (>=0.0.7)",
    # Phase 3 Dependencies
    "alembic (>=1.13.0)",
    "psycopg2-binary (>=2.9.0)", # For sync alembic operations if needed, or stick to async
    # Phase 4 Dependencies
    "structlog (>=24.1.0)",
    "prometheus-client (>=0.19.0)",
    # Phase 8 Dependencies
    "arq (>=0.25.0)",
    "redis (>=5.0.0)",
    "python-gnupg (>=0.5.0)",
    "aiohttp (>=3.9.0)",
]

[project.urls]
Homepage = "https://github.com/gabrielima7/Invario"
Repository = "https://github.com/gabrielima7/Invario"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.8.0)",
    "mypy (>=1.10.0)",
    "bandit (>=1.7.0)",
    "safety (>=3.0.0)",
    "pre-commit (>=3.7.0)",
    "pytest (>=8.0.0)",
    "pytest-cov (>=5.0.0)",
    "pytest-timeout (>=2.3.0)",
    "pytest-xdist (>=3.6.0)",
    "import-linter (>=2.1)",
    "gitingest (>=0.1.0)",
    "httpx (>=0.27.0)",
    "locust (>=2.23.0)",
    "podman-compose (>=1.0.6)",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "B", "UP", "PL"]
ignore = ["D203", "D213"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --strict-markers"
